# csv_to_ascii

./: Cargo.toml  starbucks.csv
src/: lib.rs  main.rs  some.rs  utils.rs
test/: test.rs
